--- a/index.html
+++ b/index.html
@@ -1,7 +1,107 @@
-<html>
-<head></head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
+<link rel="manifest" href="assets/img/webmanifest">
+<link rel="stylesheet" href="assets/css/styles.css">
+<script src="assets/js/jquery-3.6.0.min.js" type="text/javascript"></script>
+<script src="assets/js/scripts.js" type="text/javascript"></script>
+
+</head>
+
 <body>
-  <header><h1>My Jobs</h1></header>
+
+  <header>
+      <button>
+          <svg x="0px" y="0px" viewBox="0 0 337.792 337.792">
+          <path d="M337.792,134.824l-130.824,99.441v-52.216C117.061,173.419,30.735,207.817,0.001,302.41 C-0.337,180.728,99.895,111.781,206.968,88.488V35.382L337.792,134.824z"/>
+          </svg>
+      </button>
+    <h2>Daymon Moss</h2>
+    <h1>Full Stack Digital<br>Business Developer</h1>
+
+      <h3>Personal info:</h3>
+    <address>
+      Address:<br> Kyiv, Ukraine<br>
+        Email:<br> <a href="mailto:daymonmoss@gmail.com">daymonmoss@gmail.com</a><br>
+        LinkedIn:<br> <a href="https://linkedin.com/in/daymonmoss" target="_blank">linkedin.com/in/daymonmoss</a>
+    </address>
+      <h3>Skills:</h3>
+      <ul>
+      <li>Develop web-sites and web-apps</li>
+      <li>SEO Optimisation</li>
+      <li>PPC Setup</li>
+      <li>Data Science</li>
+      </ul>
+      <h3>Software:</h3>
+      <ul>
+         <li>Windows cmd</li>
+         <li>Linux (Ubuntu, Centos) bash</li>
+         <li>Apache</li>
+         <li>Nginx</li>
+         <li>MySQL (MariaDB)</li>
+         <li>Npm</li>
+         <li>Webpack</li>
+         <li>Git</li>
+         <li>Composer</li>
+         <li>ReactJS, mobx</li>
+         <li>VueJS</li>
+         <li>Yii2</li>
+         <li>Symfony</li>
+          <li>Magento 2</li>
+         <li>Opencart</li>
+         <li>Wordpress</li>
+         <li>ModX</li>
+      </ul>
+      <h3>Languages:</h3>
+      <ul>
+        <li>HTML</li>
+        <li>CSS: SCSS</li>
+        <li>JavaScript: TypeScript, JSX, TSX</li>
+        <li>PHP</li>
+        <li>SQL</li>
+        <li>Python</li>
+        <li>Ukrainian</li>
+        <li>Russian</li>
+        <li>English</li>
+        <li>Romanian</li>
+        <li>Polish</li>
+      </ul>
+  </header>
+  <main>
+<p>
+   Computer Systems Engineer with over 10 years of experience specialising of hardware, software and online marketing for much companies end peoples.
+   I can implement effective IT Strategies at local and global levels.
+   My greatest strength is business awareness, which enables me to permanently streamline infrastructure and applications.
+   Striving to leverage my IT management skills to achieve the best result for the shortest possible time.
+</p>
+    <section>
+<hr>
+    <h4>Experience</h4>
+<hr>
+    </section>
+    <section>
+      <hr>
+      <h4>Education</h4>
+      <hr>
+    </section>
+    <section>
+      <hr>
+      <h4>Certification</h4>
+      <hr>
+    </section>
+    <section>
+      <hr>
+      <h4>Interests</h4>
+      <hr>
+    </section>
+  </main>
+
+
 <footer></footer>
+
+
 </body>
 </html>
