--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
         <hr>
         <h4>Education</h4>
         <div class="container">
-
+            <div class="row">
                 <div class="w-50">
 
                     <div>
@@ -619,7 +619,7 @@
 
                     </div>
             </div>
-
+        </div>
         </div>
         <hr>
     </section>
