--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
         <li>Russian</li>
         <li>English</li>
         <li>Romanian</li>
-        <li>Polish</li>
     </ul>
 </header>
 <main>
@@ -639,7 +638,7 @@
 <footer></footer>
 
 <button id="return">
-    <svg xmlns="http://www.w3.org/2000/svg">
+    <svg xmlns="http://www.w3.org/2000/svg" width="54" height="54">
         <path id="up-arrow" fill="#000" fill-rule="evenodd" d="m27.16511,23.26473l5.50384,5.11581c0.38041,0.35359 0.38041,0.92536 0,1.27519l-0.91461,0.85013c-0.38041,0.35359 -0.99555,0.35359 -1.37191,0l-3.9053,-3.62245l-3.90125,3.62621c-0.38041,0.35359 -0.99555,0.35359 -1.37191,0l-0.91866,-0.85013c-0.38041,-0.35359 -0.38041,-0.92536 0,-1.27519l5.50384,-5.11581c0.38041,-0.35735 0.99555,-0.35735 1.37596,-0.00376z"/>
     </svg>
 </button>
