--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 </header>
 <main>
     <p>
-        Computer Systems Engineer with over 10 years of experience specialising of hardware, software and online
+        Computer Systems Engineer with over 10 years of experience specializing of hardware, software and online
         marketing for much companies end peoples.
         I can implement effective IT Strategies at local and global levels.
         My greatest strength is business awareness, which enables me to permanently streamline infrastructure and
